# alexlib

./: CMakeLists.txt  README.md
include/: SDL_glwindow.h  alexlib.h  game-clock.h  sdl-gl-window.h  sdl-glwindow.h  sdl-imgui.h  sdl-window.h
src/: SDL_glwindow.cpp  SDL_window.cpp  alexlib.cpp  game-clock.cpp  sdl-gl-window.cpp  sdl-glwindow.cpp  sdl-imgui.cpp  sdl-window.cpp
